--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^4.0.1"
   },
   "scripts": {
