--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "rc-slider": "^11.1.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
