--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
     "rc-slider": "^11.1.5",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18.3.1",
