--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
+    "react-google-recaptcha": "^2.1.0",
     "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
     "rc-slider": "^11.1.5",
